--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "alpinejs": "^3.10.5",
+    "daisyui": "^2.51.3",
     "rfc4648": "^1.5.2"
   },
   "devDependencies": {
